<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/nav_run"
            android:title="@string/nav_run" />
        <item
            android:id="@+id/nav_run_port"
            android:title="@string/nav_run_port" />
        <item
            android:id="@+id/nav_results"
            android:title="@string/nav_results" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_functionality"
            android:title="@string/nav_functionality" />
        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/nav_stats" />
    </group>
</menu>