...
    <string name="select_confirmation_replay">Run multiple replays to confirm differentiation</string>
    <string name="default_settings">Use default values for thresholds</string>
    <string name="force_add_header">Check me to enable special identification header in all networks</string>
    <string name="replay_finished_title">Replays Finished!</string>
    <string name="replay_size">Size: %1$d x %2$d MB</string>
    <string name="replay_time">Time: %d seconds</string>
    <string name="install_cert_label">Click the button below if you want to reinstall the credential. Please leave the password field empty and click "OK"!</string>
    <string name="install_cert_button">Reinstall credential</string>
    <string name="consent_form_title">Consent Form</string>
    <string name="consent_form">
        <![CDATA[We would like to invite you to take part in a research project. The purpose of this
        research study is to understand how cellular Internet providers give different performance
        to different network traffic from your smartphone.<br><br>For example, we would like to know if
        a provider is speeding up YouTube traffic and/or slowing down Netflix. We will use this
        information to understand how often this occurs, where this occurs and what are the
...
        Nardone</b>,<br>NU’s Director of Information Security.<br><a href="mailto:privacy@neu.edu">privacy@neu.edu</a><br><br>You
        may contact anonymously if you wish.<br><br>This study has been reviewed and approved by the
        Northeastern University Institutional Review Board (#14-08-16).<br><br><b>By clicking the
        \"Agree\" button below you are indicating that you consent to participate in this study.
        Please print out a copy of this consent form for your records.</b>]]>
    </string>
    <string name="user_agree">Accept</string>
    <string name="user_disagree">Decline</string>
    <string name="no_diff">No differentiation</string>
    <string name="has_diff">Differentiation detected</string>
    <string name="inconclusive">Results inconclusive, try running the test again</string>
    <string name="fcc_alert">Alert FCC!</string>
    <string name="tomo_failed">Localizing differentiation failed</string>
    <string name="tomo_succ">Localizing differentiation succeeded</string>
    <string name="waiting">Waiting for server result</string>
    <string name="confirmation_replay">Possible differentiation, re-running test to confirm</string>
    <string name="dashboard_button">View Online Dashboard</string>
    <string name="consent_button">View Consent Form</string>
    <string name="history_button">Previous Results</string>
    <string name="start_button">Run Tests</string>
    <string name="default_result">No previous result available</string>

    <string name="toast_nonetwork">Network not available, please re-open this app after connecting to network.</string>
    <string name="toast_replayongoing">Replay is ongoing! Please do not start again.</string>
    <string name="toast_waiting">Please wait for the server to return results.</string>
...
    <string name="selected_apps">Selected Apps</string>
    <string name="ip_type">IP Version</string>
    <string name="server">Server</string>
    <string name="carrier">Carrier</string>
    <string name="your_carrier">your carrier</string>

    <string name="nav_about">Why Wehe</string>
    <string name="nav_run">Differentiation Tests</string>
    <string name="nav_run_port">Port Tests</string>
    <string name="port_name">Port %s</string>
    <string name="port_test_title">%d MB Port Tests</string>
    <string name="port_test">Port Tests</string>
    <string name="diff_test">Differentiation Tests</string>
    <string name="nav_results">Previous Results</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_functionality">How it Works</string>
    <string name="nav_stats">View Online Dashboard</string>
    <string name="nav_header">Wehe</string>
    <string name="run_tests">Run tests</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="wifiWarning">If you are trying to run tests on %s, turn off WiFi and restart the app.</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="dialog_permission_title">Permission Information</string>
    <string name="permission_explaination">Location is used for mapping differentiation results to countries but is not required for the tests.</string>
...
